# python_basic_otus

./: README.md  postgres.env  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  README.md  app.py  crud.py  pyproject.toml  schemas.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  hello.html  list.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml
homework_06/docker-build/: Dockerfile
homework_06/forms/: __init__.py  horoscope.py
homework_06/migrations/versions/: c0b1c790e428_add_desc_to_horoscope_model.py  c3906e5bfa01_create_models.py  e747161b4947_create_models.py
homework_06/models/: __init__.py  horoscope.py  zodiac.py
homework_06/templates/: about.html  base.html  hello.html
homework_06/templates/horoscopes/: add.html  details.html  list.html
homework_06/templates/macros/: back_to_horoscopes_list.html
homework_06/templates/zodiacs/: list.html
homework_06/views/: __init__.py  horoscope.py  zodiac.py
homework_07/horseshop/category/: __init__.py
homework_07/horseshop/horseshop/: asgi.py  urls.py  wsgi.py
homework_07/horseshop/order/: admin.py  models.py
homework_07/horseshop/product/: models.py
homework_08/: pyproject.toml
homework_08/horseshop/category/: admin.py  models.py
homework_08/horseshop/horseshop/: settings.py  urls.py
homework_08/horseshop/order/: __init__.py
homework_09/: pyproject.toml
homework_10/: pyproject.toml
(+20 files in other folders)
