[tool.poetry]
name = "PythonBasic.2021-11"
version = "0.1.0"
description = ""
authors = ["Inna Sorina <sorina-inna@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
